--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:3.0.22'
+    implementation 'org.apache.groovy:groovy-all:4.0.30'
     implementation 'com.github.samtools:htsjdk:3.0.5'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
